<resources>
    <string name="app_name">Fitness UP</string>
    <string name="home">Домой</string>
    <string name="beauty">Красота</string>
    <string name="diets">Диеты</string>
    <string name="fitness">Фитнес</string>
    <string name="self_care">Здоровье</string>
    <string name="hint_et_food_name">Введите название блюда</string>
    <string name="tv_empty_food_list">Список блюд пуст. Найдите необходимое блюдо используя строку поиска или создайте самостоятельно</string>
    <string name="tv_request_empty">По вашему запросу ничего не найдено</string>
    <string name="nutrients">Нутриенты: Калории:%1$d | Белки:%2$d | Жиры:%3$d | Углеводы:%4$d</string>
    <string name="equipment">Оборудование: %1$s</string>
    <string name="secondary_muscles">Вспомогательные мышцы: %1$s</string>
    <string name="instruction">Инструкция</string>
    <string name="yoga">Йога</string>
    <string name="favorite">Избранные</string>
    <string name="poses">Позы</string>
    <string name="error_loading_data">Ошибка загрузки данных. Повторите запрос позже</string>
    <string name="you_favorite_exercise_list_is_empty">Ваш список любимых упражнений пуст</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kcal">Ккал</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carb">Углеводы</string>
    <string name="cancel">Отменить</string>
    <string name="save">Сохранить</string>
    <string name="enter_weight_in_grams">Укажите вес в граммах</string>
    <string name="begin">Начать</string>
    <string name="app_description">В приложении Fitness UP вы можете отслеживать свой прогресс благодаря информативным графикам. Выбрать готовый план тренировок или создать свой собственный. Отслеживать суточное потребление каллорий и макронутриентов</string>
    <string name="food">Питание</string>
    <string name="person_info">Личная информация</string>
    <string name="sport">Спорт</string>
    <string name="statistics">Статистика</string>
    <string name="bmi">Индекс массы тела: %1$d</string>
    <string name="current_weight">Текущий вес: %1$d</string>
    <string name="height">Рост: %1$d</string>
    <string name="empty_food">Сегодня вы еще не внесли ни одного приема пищи</string>
    <string name="food_creation">Создание блюда</string>
    <string name="kcal_100">ккал/100г</string>
    <string name="protein_100">белки/100г</string>
    <string name="fat_100">жиры/100г</string>
    <string name="carb_100">углеводы/100г</string>
    <string name="weight_in_grams">вес в граммах</string>
    <string name="amount_repeat">%1$d Повторений</string>
    <string name="exercise_amount">%1$d Упражнений</string>
    <string name="enter_training_name">Введите название тренирровки</string>
    <string name="hint_exercise_filter">Для поиска упражнений, введите название упражнения</string>
    <string name="rest">Отдых</string>
    <string name="repeat_remaining">Повторений осталось</string>
    <string name="start">Начать</string>
    <string name="finish">Завершить</string>
</resources>