<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.sport.add_new_training.AddNewTrainingFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTrainingName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/enter_training_name"
        android:background="@drawable/protein_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etFilterExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etTrainingName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/hint_exercise_filter"
        android:background="@drawable/fat_background"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFilterExercise"
        app:layout_constraintBottom_toTopOf="@id/addNewExercise"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cancel"
        android:backgroundTint="@color/red_a_700"
        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/save"
        android:backgroundTint="@color/green_a_400"
        />

    <ImageView
        android:id="@+id/addNewExercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/create_new_exercise"
        app:layout_constraintWidth_percent="0.15"
        android:background="@drawable/fat_background"
        android:layout_marginBottom="15dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>