<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="50dp"
    android:background="@drawable/weight_input_backgrpond"
    >
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/protein_background"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/food_creation"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/ivRecipeLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="@id/btnCancel"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/food_img_placeholder"
        />

    <EditText
        android:id="@+id/tvRecipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="Название блюда"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        android:gravity="center"
        />

<!--    <ImageView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvKcal"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvKcal"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvKcal"-->
<!--        android:src="@drawable/kcal_background"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        />-->

<!--    <ImageView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvProtein"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvProtein"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvProtein"-->
<!--        android:src="@drawable/protein_background"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        />-->

<!--    <ImageView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvFat"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvFat"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvFat"-->
<!--        android:src="@drawable/fat_background"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        />-->

<!--    <ImageView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        app:layout_constraintStart_toStartOf="@id/tvCarb"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvCarb"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/tvCarb"-->
<!--        android:src="@drawable/carb_background"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/tvKcal"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/kcal"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvRecipeName"-->
<!--        android:paddingStart="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/tvProtein"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/protein"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvKcal"-->
<!--        android:paddingStart="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/tvFat"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/fat"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvProtein"-->
<!--        android:paddingStart="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        />-->
<!--    <TextView-->
<!--        android:id="@+id/tvCarb"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/carb"-->
<!--        android:textColor="@color/white"-->
<!--        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/tvFat"-->
<!--        app:layout_constraintBottom_toTopOf="@id/btnCancel"-->
<!--        android:paddingStart="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        />-->

    <EditText
        android:id="@+id/etKcalValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecipeName"
        android:textColorHint="@color/white"
        android:hint="@string/kcal_100"
        android:inputType="number"
        android:background="@drawable/kcal_background"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        />

    <EditText
        android:id="@+id/etProteinValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etKcalValue"
        app:layout_constraintBottom_toTopOf="@id/etFatValue"
        android:textColorHint="@color/white"
        android:hint="@string/protein_100"
        android:inputType="number"
        android:background="@drawable/protein_background"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        />

    <EditText
        android:id="@+id/etFatValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etProteinValue"
        app:layout_constraintBottom_toTopOf="@id/etCarbValue"
        android:textColorHint="@color/white"
        android:hint="@string/fat_100"
        android:inputType="number"
        android:background="@drawable/fat_background"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:paddingStart="10dp"
        />

    <EditText
        android:id="@+id/etCarbValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFatValue"
        app:layout_constraintBottom_toTopOf="@id/etWeightValue"
        android:textColorHint="@color/white"
        android:hint="@string/carb_100"
        android:inputType="number"
        android:background="@drawable/carb_background"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/etWeightValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCarbValue"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        android:textColorHint="@color/white"
        android:hint="@string/weight_in_grams"
        android:inputType="number"
        android:background="@drawable/kcal_background"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />


    <!--    <TextView-->
<!--        android:id="@+id/tvProteinValue"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvCarb"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvProtein"-->
<!--        android:textColor="@color/white"-->
<!--        android:paddingEnd="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/tvFatValue"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvCarb"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvFat"-->
<!--        android:textColor="@color/white"-->
<!--        android:paddingEnd="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        />-->

<!--    <TextView-->
<!--        android:id="@+id/tvCarbValue"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintStart_toEndOf="@id/tvCarb"-->
<!--        app:layout_constraintTop_toTopOf="@id/tvCarb"-->
<!--        android:textColor="@color/white"-->
<!--        android:paddingEnd="20dp"-->
<!--        android:layout_marginStart="10dp"-->
<!--        />-->

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/red_a_700"
        android:textColor="@color/white"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/green_a_400"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>